# liblog4cpp

./: CMakeLists.txt  README.md
liblog4cpp/: log4cpp.hpp
src/: CMakeLists.txt
src/liblog4cpp/: log4cpp.cpp  log4cpp.test.cpp
